--- a/style.css
+++ b/style.css
@@ -1,1 +1,56 @@
-﻿
+﻿body{
+	margin:0px;
+	padding:0px;
+	font-family:"Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif
+}
+
+#header{
+	width: 900px;
+	margin: 0px auto 0px auto;
+	border: 1px solid #000;
+	clear: both;
+}
+
+#logo{
+	width:400px;
+	float:left;
+	border:1px solid #000;
+}
+
+#hsubscribe{
+	width:400px;
+	float:right;
+	border:1px solid #000;
+}
+
+#navbar{
+	width:900px;
+	margin:0px auto 0px auto;
+	border:1px solid #000;
+	clear: both;	
+}
+
+#content{
+	width:900px;
+	margin:0px auto 0px	auto;
+	border:1px solid #000;
+	clear:both;
+}
+
+#contentleft{
+	width:550px;
+	border:1px solid #000;
+	float:left;
+}
+
+#sidebar{
+	width:300px;
+	border:1px solid #000;
+	float:right;
+}
+
+#footer{
+	width:900px;
+	margin:0px auto 0px	auto;
+	border:1px solid #000;
+}
