--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
-﻿body{
+﻿
+body{
 	margin:0px;
 	padding:0px;
 	font-family:"Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif
 }
 
 #header{
-	width: 900px;
+	width: 910px;
 	margin: 0px auto 0px auto;
 	border: 1px solid #000;
 	clear: both;
 }
 
 #logo{
-	width:400px;
+	width:410px;
 	float:left;
 	border:1px solid #000;
 }
